@@ -1,29 +1,41 @@
-﻿#pragma warning disable 618
-using System;
+﻿// Copyright 2004-2012 Castle Project - http://www.castleproject.org/
+// 
+// Licensed under the Apache License, Version 2.0 (the "License");
+// you may not use this file except in compliance with the License.
+// You may obtain a copy of the License at
+// 
+//     http://www.apache.org/licenses/LICENSE-2.0
+// 
+// Unless required by applicable law or agreed to in writing, software
+// distributed under the License is distributed on an "AS IS" BASIS,
+// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+// See the License for the specific language governing permissions and
+// limitations under the License.
 
-namespace CastleTests.Bugs 
+#pragma warning disable 618
+namespace CastleTests.Bugs
 {
-    using Castle.Core.Configuration;
-    using Castle.MicroKernel;
-    using Castle.MicroKernel.Tests.ClassComponents;
+	using Castle.Core.Configuration;
+	using Castle.MicroKernel;
+	using Castle.MicroKernel.Tests.ClassComponents;
 
-    using NUnit.Framework;
+	using NUnit.Framework;
 
-    [TestFixture]
-    public class IoC_334 
-    {
-        [Test]
-        public void FacilityConfig_is_not_null()
-        {
-            using (var c = new DefaultKernel())
-            {
-                const string facilityKey = "hiper";
-                var config = new MutableConfiguration("facility");
-                c.ConfigurationStore.AddFacilityConfiguration(facilityKey, config);
-                var facility = new HiperFacility();
-                c.AddFacility(facilityKey, facility);
-                Assert.IsTrue(facility.Initialized);
-            }
-        }
-    }
+	[TestFixture]
+	public class IoC_334
+	{
+		[Test]
+		public void FacilityConfig_is_not_null()
+		{
+			using (var c = new DefaultKernel())
+			{
+				const string facilityKey = "hiper";
+				var config = new MutableConfiguration("facility");
+				c.ConfigurationStore.AddFacilityConfiguration(facilityKey, config);
+				var facility = new HiperFacility();
+				c.AddFacility(facilityKey, facility);
+				Assert.IsTrue(facility.Initialized);
+			}
+		}
+	}
 }
