@@ -6,6 +6,7 @@
 - fixed IOC-359 - Property filtering API is confusing and buggy
 - fixed IOC-356 - Specifying a hook should be enough to create an implementation-less proxy
 - fixed IOC-354 - Deadlock in pooled lifestyle under heavy load
+- fixed IOC-334 - FacilityConfig is null in facility Init()
 - fixed IOC-300 - OnCreate does not work for generic components
 
 3.1.0 (2012-08-05)
